[package]
name = "ftth-dhcp"
version = "0.1.1"
edition = "2024"

authors = ["Menhera.org Developers"]
description = "DHCP implementations for `ftth` suite of Rust FTTH CPE software."
license = "Apache-2.0 OR MPL-2.0"
readme = "README.md"
repository = "https://github.com/menhera-org/ftth-dhcp"
homepage = "https://github.com/menhera-org/ftth-dhcp"

[dependencies]
dhcproto = "0.13"
ipnet = "2"
log = "0.4.28"
socket2 = { version = "0.6.0", features = ["all"] }

[dev-dependencies]
env_logger = "0.11.8"
rand = "0.9"
ftth-rtnl = "0.3.0"
